2006-11-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript.xml: Put '%!PS' instead of '%!PS-Adobe' as
	  first line of the PostScript output, as '%!PS-Adobe' can break
	  things and '%!PS' already helps to make printers with data
	  format auto-detection do the right thing. See
	  http://lists.freestandards.org/pipermail/printing-foomatic/2006/002454.html

2006-11-22  George Liu <george.liu@ussj.ricoh.com>

	* printer/[Ricoh Lanier Savin Gestetner NRG Infotec]*.xml: 
          Added Mandriva Corporate Server 4 certification information.
          Updated PJL support for all printer entries.
          Updated PCL 5 support information for all printer entries

2006-11-21  Till Kamppeter <till.kamppeter@gmail.com>

	* Makefile.in, configure.ac, driver/cZ11.xml,
	  driver/cZ11somsom.xml, driver/gimp-print.xml, driver/hpdj.xml,
	  driver/lxm3200.xml, driver/lxm3200c.xml, driver/lxm3200m.xml,
	  driver/lxm3200p.xml, driver/oki4drv.xml: Introduced new
	  '<obsolete replace="..."/>' tag for driver XML files to mark
	  drivers obsolete and give information about their
	  replacements/successors. Let only non-obsolete driver XMLs be
	  installed by default. Introduced new "--with-drivers=..." option
	  for the configure script. This option allows to install all
	  driver XMLs, selected driver XMLs, restriction to non-obsolete
	  driver XMLs, to driver XML's with non-empty command line
	  prototype, and to driver XMLs with at least one printer for
	  which the driver is recommended. This makes packaging for
	  distributions much easier.

	* db/source/PPD/HP/mono_laser/HP_LaserJet_6MP.ppd: Added "Default"
	  InputSlot setting for auto-selection of the paper tray by the
	  printer (https://launchpad.net/bugs/49805).

2006-11-20  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Samsung-ML-1750.xml: Switched recommended driver from
	  "pxlmono" to "ljet4", text update
	  (https://launchpad.net/bugs/70425).
