@@ -22,6 +22,11 @@
     <proprietary />
   </lang>
   <autodetect>
+    <usb>
+      <commandset>GDI</commandset>
+      <manufacturer>Samsung</manufacturer>
+      <model>ML-1740</model>
+    </usb>
   </autodetect>
   <functionality>A</functionality>
   <driver>splix</driver>
