@@ -1,3 +1,8 @@
+2006-11-23  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Samsung-ML-1740.xml: Added IEEE 1284 information (RH
+	bug #208809).
+
 2006-11-22  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/Postscript.xml: Put '%!PS' instead of '%!PS-Adobe' as
